# code-translate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  glossary.json  pyproject.toml  requirements.txt  translator.py
docs/: CodeTranslate_spec.md  CodeTranslate_tasklist.md
tests/: conftest.py  test_app.py  test_direction_simple.py  test_glossary.py  test_history.py  test_translator.py
